[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "savematter"
version = "0.1.0"
description = "Proyecto para la materia de Programación Orientada a Objetos"
authors = [
  { name = "Sergio Luna", email = "luna.sergiorawr@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pygame-ce>=2.5.3",
  "pytmx",
]

scripts.savematter = "savematter.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
savematter = [ "assets/**/*" ]

[tool.uv.sources]
pytmx = { git = "https://github.com/bitcraft/pytmx" }

[tool.basedpyright]
allowedUntypedLibraries = [ "pytmx" ]
